src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

#nav-bar {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 8vh;
  background-color: red;
  color: white;
}

#title {
  font-size: 2em;
}

#nav-links {
  text-align: center;
}

#nav-links > li {
  display: inline;
  padding: 0 1vw;
  list-style-type: none;
}

.dropdown {
  display: none;
}

.nav-link {
  color: white;
  text-decoration: none;
}

.character-card {
  display: flex;
  align-items: center;
  border: 2px black solid;
  padding: 1em;
  margin: 1em;
}

.character-card > h2 {
  font-size: 3em;
  margin-right: 5px;
}

.readings {
  display: inherit;
  flex-wrap: wrap;
  margin-left: 1em;
  gap: 3px;
}

.readings > p {
  flex-basis: 45%;
}

.readings > .definition {
  margin-top: 0.5em;
  flex-basis: 100%;
}

@media (max-width: 992px) {
  #nav-bar {
    flex-direction: column;
    height: 12vh;
  }
  #title {
    font-size: 30px;
    margin-top: 0.5em;
  }
  #nav-links {
    display: none;
  }
  .dropdown {
    display: inline;
    width: 100%;
  }
  .dropbtn {
    background-color: red;
    color: white;
    border: none;
    width: 100%;
    padding: 1em;
    font-size: 1em;
    font-weight: bold;
  }
  .dropdown-content {
    display: none;
  }
  .shown {
    display: inline;
    position: absolute;
    width: 100vw;
    top: 10vh;
    right: 0;
    background-color: red;
  }
  .shown ul {
    display: flex;
    flex-direction: column;
  }
  .shown ul li {
    text-align: left;
    padding: 1em;
  }
  .shown ul li .nav-link {
    margin-left: 1em;
  }
}

